--- a/1.구구단/like-button.html
+++ b/1.구구단/like-button.html
@@ -5,39 +5,36 @@
 </head>
 <body>
 <div id="root"></div>
-<!-- dev와 prod js -->
 <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 <!--<script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>-->
 <!--<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>-->
 
-<!-- 바벨로 트랜스 파일링 -->
 <script type="text/babel">
   'use strict'; 
 
   class LikeButton extends React.Component {
-    // 99% 안쓰이지만 1% 쓰이는 경우가 있다 ErrorBoundary 같은 곳?
-    // 옛날 코드 중에 아직도 클래스로 돌아가는 코드들 있다. (과거 코드들이 class로 되어있을 가능성)
-
     constructor(props) {
       super(props);
       this.state = { liked: false };
+
+      // 과거의 this binding
+      this.onClickButton = this.onClickButton.bind(this);
     }
+
+    // 과거의 this binding
+    onClickButton() {
+      this.setState({ liked: true });
+    }
+
     render() {
       if (this.state.liked) {
         return 'You liked this.';
       }
 
-      // JS
-      // return React.createElement('button', { onClick: () => this.setState({ liked: true })}, 'Like');
-
-      // JSX
-      // 1. 실제 브라우저에서 해석은 안됨
-      // 2. 바벨을 통해 트랜스 파일링 필요
       return (
-        // state의 불변성 => setState로 수정
-        <button onClick={() => this.setState({ liked: true })}> 
+        <button onClick={this.onClickButton}> 
           Like
         </button>
       )
@@ -46,12 +43,6 @@
 </script>
 
 <script type="text/babel">
-  // JS
-  // ReactDOM.render(React.createElement(LikeButton), document.querySelector('#root'));
-
-  // JSX
-  // React v17까지만 ReactDOM.render 지원 => v18에서 사용 시 17로 run 시켜서 v18의 기능을 사용 못함
-  // ReactDOM.render(<LikeButton />, document.querySelector('#root')); // React 17버전 코드
   ReactDOM.createRoot(document.querySelector('#root')).render(<LikeButton />); // React 18버전 코드
 </script>
 </body>
